tests/baselines/reference/jsdocTypedefMissingType.errors.txt
/a.js(2,14): error TS8021: JSDoc '@typedef' tag should either have a type annotation or be followed by '@property' or '@member' tags.


==== /a.js (1 errors) ====
    // Bad: missing a type
    /** @typedef T */
                 ~
!!! error TS8021: JSDoc '@typedef' tag should either have a type annotation or be followed by '@property' or '@member' tags.
    
    const t = 0;
    
    // OK: missing a type, but have property tags.
    /**
     * @typedef Person
     * @property {string} name
     */
    
    /** @type Person */
    const person = { name: "" };
    